all quoted correctly

--- a/main.tex
+++ b/main.tex
@@ -338,7 +338,7 @@
 
 %\hspace{-1.6cm}
 %\includegraphics[trim= 0 250 0 270,clip,width=1\linewidth+3.1cm]{myfoto.jpg}	%trimming relative to image size!
-\includegraphics[trim= 350 150 0 200, clip ,width=\linewidth]{myfoto.jpg}	%trimming relative to image size
+\includegraphics[trim= 350 150 0 200, clip ,width=\linewidth]{multimedia/my_foto.jpg}	%trimming relative to image size
 
 %---------------------------------------------------------------------------------------
 %	SUMMARY
@@ -495,7 +495,7 @@ JavaScript fullstack engineer, M.Sc. Digital Media, focuses on education and hea
 
 \vspace{12pt}
 \begin{center}
-\includegraphics[width=0.35\mpwidth]{qrcode}
+\includegraphics[width=0.35\mpwidth]{multimedia/qrcode.png}
 \end{center}
 
 \end{minipage}}
